--- a/api/src/paths/users/get.yaml
+++ b/api/src/paths/users/get.yaml
@@ -1,4 +1,6 @@
-summary: Returns a list of users
+summary: Returns a list of User
+tags:
+  - User
 description: Optional extended description in CommonMark or HTML
 parameters:
   - $ref: '../../parameters/query/offset.yaml'
@@ -6,7 +8,7 @@ parameters:
   - $ref: '../../parameters/query/sort.yaml'
 responses:
   200:
-    description: A JSON array of user names
+    description: A JSON array of User
     content:
       application/json:
         schema:
