project structure; verbose errors; cleanup

--- a/api/src/paths/users/get.yaml
+++ b/api/src/paths/users/get.yaml
@@ -1,4 +1,4 @@
-summary: Returns a list of User
+summary: Return list of User
 tags:
   - User
 description: Optional extended description in CommonMark or HTML
