--- a/api/src/paths/accounts/get.yaml
+++ b/api/src/paths/accounts/get.yaml
@@ -1,6 +1,6 @@
-summary: Return list of User
+summary: Return list of Account
 tags:
-  - User
+  - Account
 description: Optional extended description in CommonMark or HTML
 parameters:
   - $ref: '../../parameters/query/offset.yaml'
@@ -8,7 +8,7 @@ parameters:
   - $ref: '../../parameters/query/sort.yaml'
 responses:
   200:
-    description: A JSON array of User
+    description: A JSON array of Account
     content:
       application/json:
         schema:
