--- a/api/src/paths/permissions/{id}/delete.yaml
+++ b/api/src/paths/permissions/{id}/delete.yaml
@@ -1,16 +1,12 @@
-summary: Get User by ID
+summary: Delete Permission by ID
 tags:
-  - User
+  - Permissions
 description: Optional extended description in CommonMark or HTML
 parameters:
   - $ref: '../../../parameters/path/id.yaml'
 responses:
-  200:
-    description: User object
-    content:
-      application/json:
-        schema:
-          $ref: '../../../schemas/Account.yaml'
+  204:
+    $ref: '../../../responses/NoContent.yaml'
   401:
     $ref: '../../../responses/Unauthorized.yaml'
   404:
