--- a/api/src/paths/services/{id}/get.yaml
+++ b/api/src/paths/services/{id}/get.yaml
@@ -1,16 +1,16 @@
-summary: Get User by ID
+summary: Get Service by ID
 tags:
-  - User
+  - Service
 description: Optional extended description in CommonMark or HTML
 parameters:
   - $ref: '../../../parameters/path/id.yaml'
 responses:
   200:
-    description: User object
+    description: Service object
     content:
       application/json:
         schema:
-          $ref: '../../../schemas/Account.yaml'
+          $ref: '../../../schemas/Service.yaml'
   401:
     $ref: '../../../responses/Unauthorized.yaml'
   404:
