--- a/api/src/paths/services/{id}/patch.yaml
+++ b/api/src/paths/services/{id}/patch.yaml
@@ -1,16 +1,18 @@
-summary: Get User by ID
+summary: Update specified fields of Service
 tags:
-  - User
+  - Service
 description: Optional extended description in CommonMark or HTML
 parameters:
   - $ref: '../../../parameters/path/id.yaml'
+requestBody:
+  required: true
+  content:
+    application/json:
+      schema:
+        $ref: '../../../schemas/Service.yaml'
 responses:
   200:
-    description: User object
-    content:
-      application/json:
-        schema:
-          $ref: '../../../schemas/Account.yaml'
+    $ref: '../../../responses/OK.yaml'
   401:
     $ref: '../../../responses/Unauthorized.yaml'
   404:
