--- a/internal/generator/bootstrap/api/src/responses/_index.yaml
+++ b/internal/generator/bootstrap/api/src/responses/_index.yaml
@@ -10,6 +10,8 @@ BadRequest:
   $ref: "./BadRequest.yaml"
 Unauthorized:
   $ref: "./Unauthorized.yaml"
+Forbidden:
+  $ref: "./Forbidden.yaml"
 NotFound:
   $ref: "./NotFound.yaml"
 UnexpectedError:
